RESOLVED FIXED200557
REGRESSION (52279987): Most of the WKUIDelegate contextMenu delegate methods are not being called
https://bugs.webkit.org/show_bug.cgi?id=200557
Summary REGRESSION (52279987): Most of the WKUIDelegate contextMenu delegate methods ...
Dean Jackson
Reported 2019-08-08 18:13:28 PDT
REGRESSION (52279987): Most of the WKUIDelegate contextMenu delegate methods are not being called
Attachments
Patch (3.62 KB, patch)
2019-08-08 18:17 PDT, Dean Jackson
wenson_hsieh: review+
Dean Jackson
Comment 1 2019-08-08 18:13:54 PDT
Dean Jackson
Comment 2 2019-08-08 18:17:00 PDT
Dean Jackson
Comment 3 2019-08-08 18:51:21 PDT
Actually <rdar://problem/53717962> now.
Dean Jackson
Comment 4 2019-08-08 19:11:52 PDT
Darin Adler
Comment 5 2019-08-09 08:07:28 PDT
Does this break compatible with the one-version-back iOS? Don’t we normally keep that working for test purposes?
Wenson Hsieh
Comment 6 2019-08-09 08:08:54 PDT
(In reply to Darin Adler from comment #5) > Does this break compatible with the one-version-back iOS? Don’t we normally > keep that working for test purposes? UIContextMenuInteraction is new in iOS 13, so this should only break compatibility with older versions of iOS 13.
Darin Adler
Comment 7 2019-08-09 08:17:00 PDT
(In reply to Wenson Hsieh from comment #6) > (In reply to Darin Adler from comment #5) > > Does this break compatible with the one-version-back iOS? Don’t we normally > > keep that working for test purposes? > > UIContextMenuInteraction is new in iOS 13, so this should only break > compatibility with older versions of iOS 13. OK, great.
Note You need to log in before you can comment on or make changes to this bug.