Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -8204,9 +8204,7 @@ static RetainPtr<UITargetedPreview> createFallbackTargetedPreview(UIView *rootVi
     return [self _createTargetedPreviewIfPossible];
 }
 
-ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
-- (void)contextMenuInteractionWillPresent:(UIContextMenuInteraction *)interaction
-ALLOW_DEPRECATED_IMPLEMENTATIONS_END
+- (void)contextMenuInteraction:(UIContextMenuInteraction *)interaction willDisplayMenuForConfiguration:(UIContextMenuConfiguration *)configuration animator:(id<UIContextMenuInteractionAnimating>)animator
 {
     if (!_webView)
         return;
@@ -8227,9 +8225,7 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
     return std::exchange(_contextMenuInteractionTargetedPreview, nil).autorelease();
 }
 
-ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
-- (void)contextMenuInteraction:(UIContextMenuInteraction *)interaction willCommitWithAnimator:(id<UIContextMenuInteractionCommitAnimating>)animator
-ALLOW_DEPRECATED_IMPLEMENTATIONS_END
+- (void)contextMenuInteraction:(UIContextMenuInteraction *)interaction willPerformPreviewActionForMenuWithConfiguration:(UIContextMenuConfiguration *)configuration animator:(id<UIContextMenuInteractionCommitAnimating>)animator
 {
     if (!_webView)
         return;
@@ -8282,9 +8278,7 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
     }
 }
 
-ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
-- (void)contextMenuInteractionDidEnd:(UIContextMenuInteraction *)interaction
-ALLOW_DEPRECATED_IMPLEMENTATIONS_END
+- (void)contextMenuInteraction:(UIContextMenuInteraction *)interaction willEndForConfiguration:(UIContextMenuConfiguration *)configuration animator:(nullable id<UIContextMenuInteractionAnimating>)animator
 {
     if (!_webView)
         return;
